--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,27 +1,14 @@
 name: "构建与发布"
-run-name: 任务参数:${{ inputs.job }} ;分支:${{ github.ref_name }} # 每次运行的时候显示的名字
+run-name: 任务参数:${{ inputs.job }} ;分支:${{ github.ref_name }}
 
-# 本yml参考于 https://github.com/WiseLibs/better-sqlite3/blob/master/.github/workflows/build.yml
 on:
-  workflow_dispatch: # 手动触发 push(推送时候) pull_request(pr创建的时候)
-    inputs: # 只有这个属性 用于接收多个参数 可能是为了预留功能 一个属性也设置
-      job: # 参数名称 通过 ${{ github.event.inputs.job }} 访问值 下面是参数的要求描述
+  workflow_dispatch:
+    inputs:
+      job:
         description: "任务类型,push-npm"
         required: true
         default: push-npm
         type: string
-      tag:
-        description: '发布docker可选的docker标签'
-        required: false
-        default: ''
-      ubuntu_version:
-        description: 'ubuntu版本'
-        required: false
-        default: 'ubuntu-latest' #  ${{ inputs.ubuntu_version || 'ubuntu-20.04' }} 也可以
-      win_version:
-        description: 'windows版本'
-        required: false
-        default: 'windows-latest'
 
 
 jobs:
@@ -35,7 +22,6 @@ jobs:
         with:
           node-version: 18
           registry-url: https://registry.npmjs.org
-      - run: pip.exe install setuptools
       - run: npm install
       - run: npm run build
       - run: npm publish
